<resources>
    <string name="app_name">GameSuitBinar</string>
    <string name="text_com">COM</string>
    <string name="text_title_splashscreen">WELCOME TO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_intro_one">Player 1 Vs Player 2</string>
    <string name="text_desc_intro_one">Play Game Suit versus Player</string>
    <string name="text_title_intro_two">Player vs COM</string>
    <string name="text_desc_intro_two">Play Game Suit versus Com</string>
    <string name="text_title_intro_tri">Your Name</string>
    <string name="text_title_menu">Hi %s !\nChoose your GamePlay ?</string>
    <string name="text_menu_player_player">%s VS Player</string>
    <string name="text_title_player_one_game">%s</string>
    <string name="text_menu_player_com">%s VS COM</string>
    <string name="text_toast_player_one_rock">Memilih Rock</string>
    <string name="text_result">Congratulations</string>
    <string name="text_btn_play_again">Play Again</string>
    <string name="button_text_back_to_menu">Back to Menu</string>
    <string name="text_title_player_2">Pemain 2</string>
    <string name="text_version_splashscreen">Version v1.1.0</string>
    <string name="text_next_slider">Next</string>
    <string name="text_hint_form_player">fill your player name</string>
    <string name="text_get_started">Get Started</string>
    <string name="text_close_snackbar">Close</string>
    <string name="text_hello_snackbar"> Hello, </string>
    <string name="text_vscom_com_winner">COM Winner</string>
    <string name="text_vscom_com_player_draw">Player and COM Draw</string>
    <string name="text_vscom_player_winner">, Winner</string>
    <string name="text_com_dialog_play_again">Play Again</string>
    <string name="text_com_dialog_back_to_menu">Back to Menu</string>
    <string name="text_player_dialog_play_again">Play Again</string>
    <string name="text_player_dialog_back_to_menu">Back to Menu</string>
</resources>