<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_intro_tri"
    tools:context=".ui.intro.IntroTriFragment">

    <ImageView
        android:id="@+id/iv_icon_ilustration_intro_tri"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_180sdp"
        android:src="@drawable/ic_intro_tri"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"/>


    <TextView
        android:id="@+id/tv_title_intro_tri"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_title_intro_tri"
        android:textColor="@color/black"
        android:fontFamily="@font/gotham"
        android:textFontWeight="600"
        android:lines="1"
        android:textSize="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/iv_icon_ilustration_intro_tri"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <EditText
        android:id="@+id/et_player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:fontFamily="@font/gotham_font"
        android:hint="@string/text_hint_form_player"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_intro_tri"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <TextView
        android:id="@+id/tv_get_started"
        android:layout_width="0dp"
        android:text="@string/text_get_started"
        android:fontFamily="@font/gotham_font"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:layout_margin="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>